# obr-macro-model

./: .gitignore  .pre-commit-config.yaml  README.md  grab_ons_data.py  parsing.py  process_obr_excel_into_csv.py  pyproject.toml
data/obr/: List-of-model-variables_May-2021.xlsx
