[tool.poetry]
name = "obr-macro-model"
version = "0.1.0"
description = "A python translation of the Office for Budget Responsiblity's (OBR's) UK macroeconomic model"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
jupyter = "^1.0.0"
openpyxl = "^3.0.10"
skimpy = "^0.0.8"
pre-commit-hooks = "^4.4.0"
loguru = "^0.6.0"
pyarrow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit-hooks = "^4.4.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
